-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: hotspot
-
Environment:
Fedora 42 x86_64
-
b26
-
linux
A compilation error regression by:
commit 72ebca8a0b19fac8a9483e5a3a98b454176fc342 (HEAD)
Author: Severin Gehwolf <sgehwolf@openjdk.org>
Date: Tue Nov 18 09:42:28 2025 +0000
8365606: Container code should not be using jlong/julong
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:212:10: error: 'is_containerized' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
212 | bool is_containerized();
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:284:18: note: overridden virtual function is here
284 | virtual bool is_containerized() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:214:18: error: 'container_type' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
214 | const char * container_type() {
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:288:26: note: overridden virtual function is here
288 | virtual const char * container_type() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:217:54: error: 'memory_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
217 | CachingCgroupController<CgroupMemoryController>* memory_controller() { return _memory; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:289:62: note: overridden virtual function is here
289 | virtual CachingCgroupController<CgroupMemoryController>* memory_controller() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:218:51: error: 'cpu_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
218 | CachingCgroupController<CgroupCpuController>* cpu_controller() { return _cpu; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:290:59: note: overridden virtual function is here
290 | virtual CachingCgroupController<CgroupCpuController>* cpu_controller() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:219:30: error: 'cpuacct_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override 219 | CgroupCpuacctController* cpuacct_controller() { return _cpuacct; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:291:38: note: overridden virtual function is here
291 | virtual CgroupCpuacctController* cpuacct_controller() = 0;
| ^
5 errors generated.
gmake[3]: *** [lib/CompileJvm.gmk:180: build/fastdebug-default-clang/hotspot/variant-server/libjvm/objs/cgroupSubsystem_linux.o] Error 1
commit 72ebca8a0b19fac8a9483e5a3a98b454176fc342 (HEAD)
Author: Severin Gehwolf <sgehwolf@openjdk.org>
Date: Tue Nov 18 09:42:28 2025 +0000
8365606: Container code should not be using jlong/julong
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:212:10: error: 'is_containerized' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
212 | bool is_containerized();
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:284:18: note: overridden virtual function is here
284 | virtual bool is_containerized() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:214:18: error: 'container_type' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
214 | const char * container_type() {
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:288:26: note: overridden virtual function is here
288 | virtual const char * container_type() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:217:54: error: 'memory_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
217 | CachingCgroupController<CgroupMemoryController>* memory_controller() { return _memory; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:289:62: note: overridden virtual function is here
289 | virtual CachingCgroupController<CgroupMemoryController>* memory_controller() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:218:51: error: 'cpu_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override]
218 | CachingCgroupController<CgroupCpuController>* cpu_controller() { return _cpu; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:290:59: note: overridden virtual function is here
290 | virtual CachingCgroupController<CgroupCpuController>* cpu_controller() = 0;
| ^
In file included from src/hotspot/os/linux/cgroupSubsystem_linux.cpp:27:
src/hotspot/os/linux/cgroupV1Subsystem_linux.hpp:219:30: error: 'cpuacct_controller' overrides a member function but is not marked 'override' [-Werror,-Winconsistent-missing-override 219 | CgroupCpuacctController* cpuacct_controller() { return _cpuacct; }
| ^
src/hotspot/os/linux/cgroupSubsystem_linux.hpp:291:38: note: overridden virtual function is here
291 | virtual CgroupCpuacctController* cpuacct_controller() = 0;
| ^
5 errors generated.
gmake[3]: *** [lib/CompileJvm.gmk:180: build/fastdebug-default-clang/hotspot/variant-server/libjvm/objs/cgroupSubsystem_linux.o] Error 1
- caused by
-
JDK-8365606 Container code should not be using jlong/julong
-
- Resolved
-
- duplicates
-
JDK-8372196 Compile error in cgroup code on Linux when using clang after JDK-8365606
-
- Closed
-
- links to
-
Review(master)
openjdk/jdk/28384