8372135: clang compilation error

Reviewed-by: stefank, jsjolen, kbarrett